# OLSQ2

./: .gitignore  54QBT_05CYC_QSE_0.out  54QBT_15CYC_QSE_0.out  54QBT_25CYC_QSE_0.out  54QBT_35CYC_QSE_0.out  54QBT_45CYC_QSE_0.out  CMakeLists.txt  Makefile  README.md  cnf_analysizer.py  constraint.txt  gen_cir_qiskit.py  grid_qaoa_16_0.json  intermediate_result_swap_count_6.qasm  qaoa_16_0.out  qaoa_24_0.out  qaoa_8_0.out  run.sh  run0.sh  run1.sh  run2.sh  run3.sh  run4.sh  run_olsq.py  run_olsq2.py  run_olsq_ori.py  run_satmap.sh  run_test_olsq.py  test.py  test_olsq.py  test_olsq_cirq.py  test_olsq_qiskit.py  test_runtime.sh  test_runtime_ori.sh  verify_olsq.py
app/: main.cpp
architecture/: aspen.txt  eagle.txt  syc.txt
benchmark/qaoa/: qaoa_16_0.qasm  qaoa_20_0.qasm  qaoa_24_0.qasm  qaoa_28_0.qasm  qaoa_36_0.qasm  qaoa_40_0.qasm  qaoa_4_0.qasm
benchmark/qaoa_test/: qaoa_4_0.qasm
benchmark/queko_test/: 16QBT_05CYC_TFL_0.qasm
dac23/: draw.py
dac23/satmap_results/: mapped_16QBT_05CYC_TFL_0.qasm  mapped_16QBT_15CYC_TFL_0.qasm  mapped_16QBT_25CYC_TFL_0.qasm  mapped_16QBT_35CYC_TFL_0.qasm  mapped_16QBT_45CYC_TFL_0.qasm  mapped_4gt13_92.qasm  mapped_4mod5-v0_19.qasm  mapped_barenco_tof_4.qasm  mapped_barenco_tof_5.qasm  mapped_ising_model_10.qasm  mapped_qft_8.qasm  mapped_tof_4.qasm  mapped_tof_5.qasm
dac23/swap_opt/: aspen-4_16QBT_05CYC_TFL_0.json  aspen-4_16QBT_15CYC_TFL_0.json  aspen-4_16QBT_25CYC_TFL_0.json  aspen-4_16QBT_35CYC_TFL_0.json  aspen-4_16QBT_45CYC_TFL_0.json  sycamore_16QBT_15CYC_TFL_0.json  sycamore_16QBT_25CYC_TFL_0.json  sycamore_16QBT_35CYC_TFL_0.json  sycamore_16QBT_45CYC_TFL_0.json  sycamore_4gt13_92.json  sycamore_4mod5-v0_19.json  sycamore_54QBT_05CYC_QSE_0.json  sycamore_54QBT_15CYC_QSE_0.json  sycamore_54QBT_25CYC_QSE_0.json  sycamore_54QBT_35CYC_QSE_0.json  sycamore_54QBT_45CYC_QSE_0.json  sycamore_barenco_tof_4.json  sycamore_barenco_tof_5.json  sycamore_decod24-v1_41.json  sycamore_ising_model_10.json  sycamore_tof_4.json  sycamore_tof_5.json
example/: grid_barenco_tof_4.json  grid_qaoa_16_0.json  grid_qaoa_16_0.qasm
include/pybind11/: Makefile  cmake_install.cmake
olsq/: __init__.py  input.py  output.py  parser.py  run_h_compiler.py  solve.py  solve_bitwuzla.py  solve_euf.py  solve_int.py  solve_int_euf.py  solve_no_swap.py  solve_ori.py
output_example/: grid_qaoa_16_0.json
qaoa_test_example/: grid_qaoa_4_0.json  grid_qaoa_4_0.qasm
queko_test_example/: grid_16QBT_05CYC_TFL_0.json  grid_16QBT_05CYC_TFL_0.qasm
src/api/: apiPy.cpp
src/cir/: circuit.cpp  circuit.hpp  gate.hpp
src/device/: device.cpp  device.hpp
src/misc/: global.hpp  timeUsage.cpp  timeUsage.hpp
src/olsq/: olsq.cpp  olsq.hpp
src/pyolsq/: __init__.py  apiPy.py  input.py  run_h_compiler.py
src/pyolsq/olsq_cirq/: __init__.py  solve.py
src/pyolsq/olsq_qiskit/: __init__.py  solve.py
test/: simple.cpp
test_heuristic/: 410_0.json  412_0.json  414_0.json  416_0.json  510_0.json
